# minarca

./: .gitignore  .gitlab-ci.yml  DEVELOP.md  Jenkinsfile  LICENSE  LICENSE.fr  MANIFEST.in  Makefile  README.md  RELEASE.md  TODO  babel.cfg  get-minarca.sh  id_rsa  id_rsa.pub  minarca.nsi  minarca.postinst  minarca.spec  minarca_brand.plugin  minarca_disk_space.plugin  minarca_user_setup.plugin  pom.xml  pyproject.toml  rdw.conf  requirements.txt  setup.cfg  setup.py  sonar-project.properties  sonar-project.properties.in  test-generate.py  test-rsa.py  test-validate.py  tox.ini
debian/: control  minarca-client.desktop  minarca-client.install  minarca-client.links  rules
doc/: Procedures.odt  Testcases.odt  api.md  architecture-overview.graphml  architecture.md  conf.py  configuration-latest.md  configuration-ldap.md  configuration.md  development.md  faq.md  hardening.md  index-client.rst  index-server.rst  index.md  index.rst  installation.md  introduction.md  migration.md  minarca-client-cli.md  minarca-client-errors.md  minarca-client.md  networking.graphml  networking.md  openapi.json  openapi.py  quota.md  settings.md  support-backupninja.md  troubleshooting.md
docker/: Dockerfile  README.md  docker-compose.yml  start.sh
integration-tests/: Dockerfile.minarca-client  Dockerfile.minarca-quota-api  Dockerfile.minarca-server  docker-compose.yml  run.sh  test.sh
minarca-client/: .gitignore  .gitlab-ci.yml  DEVELOP.md  MANIFEST.in  Makefile  README.md  TODO  babel.cfg  formatter.xml  minarca.dmgbuild  minarca.nsi  minarca.postinst  minarca.spec  pom.xml  setup.cfg  setup.py  tox.ini
minarca-core/: pom.xml
minarca-icons/: pom.xml
minarca-installation-package/: pom.xml
minarca-installation-package-deb/: pom.xml
minarca-installation-package-unix/: pom.xml
minarca-plugins/: MANIFEST.in  minarca_brand.plugin  minarca_disk_space.plugin  minarca_user_setup.plugin  setup.cfg  setup.py  tox.ini
minarca-quota-api/: Makefile  README.md  nosetests.xml  setup.cfg  setup.py  tox.ini
minarca-scripts/: pom.xml
minarca-server/: README.md  setup.py  tox.ini
minarca-test/: pom.xml
minarca-ui/: .gitignore  id_rsa.pub  mykey.pem  mykey.ppk  pom.xml
minarca_brand/: .gitignore  __init__.py  manifest.json  minarca.css  minarca.less  test.html  variables.less
minarca_client/: __init__.py  (+3 more)
(+733 files in other folders)
